# Magnetite

./: .gitignore  Cargo.toml  LICENSE  readme.md  under-the-hood.md
examples/cover-eample/: input.json  input_squish.json  input_stretch.json
examples/linedin-logo/: input.json
examples/tensile-example/: input.json  vertices.csv  vertices_inner.csv
scripts/: plot.py
src/: datatypes.rs  error.rs  main.rs  mesher.rs  post_processor.rs  solver.rs
