[package]
name = "magnetite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmltree = "0.10.0"
quick-xml = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
roxmltree = "0.19.0"
